Wait until autosuggest elements are rendered before displaying the search controls - this avoids homepage layout shifts

--- a/src/app/views/search.css
+++ b/src/app/views/search.css
@@ -1,3 +1,7 @@
+#search form {
+  display: none;
+}
+
 #search div.card-body {
   padding-top: 0;
 }
